# netpry

./: .gitignore  Makefile  go.mod  go.sum  package.json  pnpm-lock.yaml
cmd/: cli.go
db/: db.go
proxy/: client.go  handler.go  middleware.go  proxy.go  webui.go
proxy/_webui/: README.md  index.html  package.json  pnpm-lock.yaml
proxy/_webui/src/: App.vue  main.ts
proxy/_webui/src/assets/: base.css  main.css
proxy/_webui/src/components/: TabLayout.vue
proxy/_webui/src/views/: HomeView.vue
proxy/_webui/src/views/HomePanels/: RequestDetailPanel.vue  RequestListPanel.vue  ResponseDetailPanel.vue
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/http_server/: mod.rs
src-tauri/src/proxy_server/: mod.rs  proxy_server.rs  request_details.rs  store.rs
src/assets/: samples.json  style.css
src/components/: Content.vue  Footer.vue  MethodTag.vue  MonacoEditor.vue  NavBar.vue  RequestDetail.vue  RequestList.vue  Section.vue  SettingDialog.vue  URI.vue
src/store/: proxy_store.ts  request_details_store.ts
src/views/: DashboardView.vue
src/views/tabs/: HeadersTab.vue  PayloadTab.vue  PreviewTab.vue  ResponseTab.vue
